@@ -10,6 +10,7 @@
     <buildFile url="file://$PROJECT_DIR$/common/db/build.xml" />
     <buildFile url="file://$PROJECT_DIR$/common/model/build.xml" />
     <buildFile url="file://$PROJECT_DIR$/common/server/build.xml" />
+    <buildFile url="file://$PROJECT_DIR$/common/server-http/build.xml" />
     <buildFile url="file://$PROJECT_DIR$/framework/build.xml" />
     <buildFile url="file://$PROJECT_DIR$/framework/db-core/build.xml" />
     <buildFile url="file://$PROJECT_DIR$/framework/db-local/build.xml" />
@@ -32,7 +33,6 @@
     <buildFile url="file://$PROJECT_DIR$/plugins/hikari-pool/build.xml" />
     <buildFile url="file://$PROJECT_DIR$/plugins/imagepanel/build.xml" />
     <buildFile url="file://$PROJECT_DIR$/plugins/jasperreports/build.xml" />
-    <buildFile url="file://$PROJECT_DIR$/plugins/jetty/build.xml" />
     <buildFile url="file://$PROJECT_DIR$/plugins/json/build.xml" />
     <buildFile url="file://$PROJECT_DIR$/plugins/log4j-proxy/build.xml" />
     <buildFile url="file://$PROJECT_DIR$/plugins/logback-proxy/build.xml" />
