@@ -12,11 +12,6 @@
     <orderEntry type="sourceFolder" forTests="false" />
     <orderEntry type="module" module-name="jminor-common-core" />
     <orderEntry type="module" module-name="jminor-common-server" />
-    <orderEntry type="module" module-name="jminor-framework-db-core" scope="TEST" />
-    <orderEntry type="module" module-name="jminor-framework-db-remote" scope="TEST" />
-    <orderEntry type="module" module-name="jminor-framework-db-local" scope="TEST" />
-    <orderEntry type="module" module-name="jminor-framework-server" scope="TEST" />
-    <orderEntry type="module" module-name="plugin-json" />
     <orderEntry type="module-library" exported="">
       <library>
         <CLASSES>
