@@ -1,5 +1,0 @@
-<project name="jminor-plugin-jetty">
-  <property name="project.root" value="../.."/>
-  <property name="java.module.name" value="org.jminor.plugin.jetty"/>
-  <import file="${project.root}/build-common.xml"/>
-</project>
