@@ -12,11 +12,11 @@
     <orderEntry type="sourceFolder" forTests="false" />
     <orderEntry type="module" module-name="jminor-common-core" />
     <orderEntry type="module" module-name="jminor-common-server" />
+    <orderEntry type="module" module-name="jminor-common-server-http" />
     <orderEntry type="module" module-name="jminor-framework-db-core" />
     <orderEntry type="module" module-name="jminor-framework-db-remote" />
     <orderEntry type="module" module-name="jminor-framework-db-local" scope="TEST" />
     <orderEntry type="module" module-name="jminor-framework-server" scope="TEST" />
-    <orderEntry type="module" module-name="plugin-jetty" />
     <orderEntry type="module-library">
       <library>
         <CLASSES>
